creacion -de-toda-la -pantalla-de-pruebas-con-estilos-y-funciones

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
           <a href="#" style="--i:0;">Descripcion</a>
           <a href="#" style="--i:1;">Requerimientos</a>
           <a href="#" style="--i:2;">Arquitectura</a>
-          <a href="#" style="--i:3;">Pruebas</a>
+          <a href="/controllers/pruebas" style="--i:3;">Pruebas</a>
           <a href="#" style="--i:4;">Despliegue</a>
           <a href="#" style="--i:5;">Para desarrollo</a>
           <a href="/controllers/formulario" style="--i:6;">Contactanos</a>
