--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet"  href="/css/styles.css" th:href="@{/css/styles.css}">
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="/css/styles.css"
+      th:href="@{/css/styles.css}"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
-        <a href="/" class="logo">Bienvenidos a tu casa</a>
-        <input type="checkbox" id="check">
-       <label for="check" class="icons">
-          <i class='bx bx-menu' id="icon-menu"></i>
-          <i class='bx bx-x' id="icon-close" ></i>
-       </label>
+      <a href="/" class="logo">Bienvenidos a tu casa</a>
+      <input type="checkbox" id="check" />
+      <label for="check" class="icons">
+        <i class="bx bx-menu" id="icon-menu"></i>
+        <i class="bx bx-x" id="icon-close"></i>
+      </label>
       <nav class="navegacion">
-          <a href="/controllers/wikigroup">Nuestro equipo</a>
-          <a href="#" style="--i:0;">Descripcion</a>
-          <a href="#" style="--i:1;">Requerimientos</a>
-          <a href="#" style="--i:2;">Arquitectura</a>
-          <a href="/controllers/pruebas" style="--i:3;">Pruebas</a>
-          <a href="#" style="--i:4;">Despliegue</a>
-          <a href="#" style="--i:5;">Para desarrollo</a>
-          <a href="/controllers/formulario" style="--i:6;">Contactanos</a>
+        <a href="/controllers/wikigroup">Nuestro equipo</a>
+        <a href="#" style="--i: 0">Descripcion</a>
+        <a href="#" style="--i: 1">Requerimientos</a>
+        <a href="/controllers/arquitecture" style="--i: 2">Arquitectura</a>
+        <a href="/controllers/pruebas" style="--i: 3">Pruebas</a>
+        <a href="#" style="--i: 4">Despliegue</a>
+        <a href="#" style="--i: 5">Para desarrollo</a>
+        <a href="/controllers/form" style="--i: 6">Contactanos</a>
       </nav>
-  </header>
+    </header>
 
-  
-<script src="/js/script.js"  th:src="@{/js/script.js}"></script>
-
-</body>
+    <script src="/js/script.js" th:src="@{/js/script.js}"></script>
+  </body>
 </html>
