--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
         <a href="#" style="--i: 1">Requerimientos</a>
         <a href="/controllers/arquitecture" style="--i: 2">Arquitectura</a>
         <a href="/controllers/pruebas" style="--i: 3">Pruebas</a>
-        <a href="#" style="--i: 4">Despliegue</a>
+        <a href="/controllers/deployment" style="--i: 4">Despliegue</a>
         <a href="#" style="--i: 5">Para desarrollo</a>
         <a href="/controllers/form" style="--i: 6">Contactanos</a>
       </nav>
