--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
       <nav class="navegacion">
         <a href="/controllers/wikigroup">Nuestro equipo</a>
         <a href="/controllers/description" style="--i: 0">Descripcion</a>
-        <a href="#" style="--i: 1">Requerimientos</a>
+        <a href="/controllers/requi" style="--i: 1">Requerimientos</a>
         <a href="/controllers/arquitecture" style="--i: 2">Arquitectura</a>
         <a href="/controllers/pruebas" style="--i: 3">Pruebas</a>
         <a href="/controllers/deployment" style="--i: 4">Despliegue</a>
